# littlephoebe

./: .gitignore
CAD/: Back_holder.ipt  Cam_konstruction.ipt  Cam_konstruction_V2.ipt  Deckel_Parachute.ipt  Deckel_Parachute_2.ipt  Deckel_Parachute_3.ipt  Deckel_Parachute_5.ipt  Deckel_Parachute_5_1.ipt  Deckel_Parachute_6.ipt  Electro_Sensor.ipt  Electro_bat_down.ipt  Electro_bat_up.ipt  Electro_esp32.ipt  Electro_esp32_up.ipt  Electro_gps.ipt  Electro_lora.ipt  Electro_unit.ipt  Electro_unit_2.ipt  Elektro_Gyro.ipt  Elektro_asm.iam  Engine.ipt  Leitwerk.ipt  Materialeigenschaften.txt  Parachute_In.ipt  Parachute_Verb.ipt  Ronde_Engine.ipt  Ronde_Engine_draw.idw  Segment_Engine.ipt  Segment_elektro.ipt  Segment_mitte.ipt  Segment_recovery.ipt  Segment_spitze.ipt  Servo_Ku_asm.iam  Servo_Kupplung.ipt  Servo_Kupplung_V2.ipt  Servo_Kupplung_V3.ipt  Servo_holder.ipt  Spitze.ipt  Verbindungsring.ipt  Verbindungsring_2.ipt  (+15 more)
CAD/OldVersions/: Cam_konstruction.0001.ipt  Cam_konstruction.0016.ipt  Cam_konstruction_V2.0010.ipt  Cam_konstruction_V2.0012.ipt  (+134 more)
OpenRocket/: LittlePhoebe-H165.ork  first_rocket.ork
code/: Rocket-Class-Diagramm.vsdx
code/arduino/: ArduinoSupport.py  CMakeLists.txt
code/arduino/lib/: CMakeLists.txt
code/arduino/lib/Adafruit-GFX-Library/: CMakeLists.txt
code/arduino/lib/Adafruit_BMP280_Library/: CMakeLists.txt
code/arduino/lib/Adafruit_NeoPixel/: CMakeLists.txt
code/arduino/lib/Adafruit_SSD1306/: CMakeLists.txt
code/arduino/lib/Adafruit_Sensor/: CMakeLists.txt
code/arduino/lib/Arduino_BuiltIn/: CMakeLists.txt
code/arduino/lib/BMP280/: CMakeLists.txt
code/arduino/lib/EEPROM/: CMakeLists.txt
code/arduino/lib/Ethernet2/: CMakeLists.txt
code/arduino/lib/Firmata/: CMakeLists.txt
code/arduino/lib/HDC100X/: CMakeLists.txt
code/arduino/lib/HID/: CMakeLists.txt
code/arduino/lib/Keyboard/: CMakeLists.txt
code/arduino/lib/LiquidCrystal/: CMakeLists.txt
code/arduino/lib/Makerblog_TSL45315/: CMakeLists.txt
code/arduino/lib/Mouse/: CMakeLists.txt
code/arduino/lib/RV8523/: CMakeLists.txt
code/arduino/lib/SD/: CMakeLists.txt
code/arduino/lib/SD/src/: SD.cpp
code/arduino/lib/SD/src/utility/: Sd2Card.cpp
code/arduino/lib/SDS011-select-serial/: CMakeLists.txt
code/arduino/lib/SPI/: CMakeLists.txt
code/arduino/lib/SSD1306-Plot-Library/: CMakeLists.txt
code/arduino/lib/SenseBox-MCU/: CMakeLists.txt
code/arduino/lib/Servo/: CMakeLists.txt
code/arduino/lib/SoftwareSerial/: CMakeLists.txt
code/arduino/lib/Sqlite_Micro_Logger/: CMakeLists.txt
code/arduino/lib/Sqlite_Micro_Logger/examples/Uno_and_above/: Uno_and_above.ino
code/arduino/lib/Stepper/: CMakeLists.txt
code/arduino/lib/TFT/: CMakeLists.txt
code/arduino/lib/TinyGPSPlus/: CMakeLists.txt
code/arduino/lib/VEML6070/: CMakeLists.txt
code/arduino/lib/WiFi101/: CMakeLists.txt
code/arduino/lib/Wire/src/utility/: twi.c
code/arduino/lib/arduino-core/: CMakeLists.txt
code/arduino/lib/arduino-core/Wire/: CMakeLists.txt
code/arduino/pyarduino_helper/: Cmake.py  Executor.py  Library.py
code/arduino/sketches/Read-All-Sensors.ino/: Read-All-Sensors.ino.ino
code/arduino/src/: CMakeLists.txt  arduino_sketch.ino  blink.cpp  blink_lib.cpp  blink_lib.hpp  main.cpp
code/arduino/src/blink/: CMakeLists.txt
rocket/: rocket.kicad_prl  rocket.kicad_pro
(+69 files in other folders)
