add_subdirectory(Adafruit-GFX-Library)
add_subdirectory(Adafruit_BMP280_Library)
add_subdirectory(Adafruit_NeoPixel)
add_subdirectory(Adafruit_Sensor)
add_subdirectory(Adafruit_SSD1306)
add_subdirectory(arduino-core)
add_subdirectory(Arduino_BuiltIn)
add_subdirectory(Ethernet2)
add_subdirectory(Firmata)
add_subdirectory(HDC100X)
add_subdirectory(Keyboard)
add_subdirectory(LiquidCrystal)
add_subdirectory(Mouse)
add_subdirectory(RV8523)
add_subdirectory(SD)
add_subdirectory(SDS011-select-serial)
add_subdirectory(SenseBox-MCU)
add_subdirectory(Servo)
add_subdirectory(Sqlite_Micro_Logger)
add_subdirectory(SSD1306-Plot-Library)
add_subdirectory(Stepper)
add_subdirectory(TFT)
add_subdirectory(TinyGPSPlus)
add_subdirectory(VEML6070)
add_subdirectory(WiFi101)
add_subdirectory(EEPROM)
add_subdirectory(HID)
add_subdirectory(SoftwareSerial)
add_subdirectory(SPI)
add_subdirectory(Wire)
add_subdirectory(BMP280)
add_subdirectory(Makerblog_TSL45315)